Fixing styling issues on mobile

--- a/src/Styles/Project.css
+++ b/src/Styles/Project.css
@@ -149,7 +149,6 @@
     .projDesc
     {
         font-size: 0.8rem;
-        height:4rem;
     }
 
 
@@ -162,8 +161,6 @@
     {
         font-size: 0.8rem;
     }
-
-    
 }  
 
 
