--- a/src/assets/components/Home/Home.css
+++ b/src/assets/components/Home/Home.css
@@ -85,16 +85,6 @@
     {
         margin: auto 0rem;
     }
-
-    .expBarImg
-    {
-        width: 7rem;
-        height: 6rem;
-    }
-    .expTitle
-    {
-        font-size: 1rem;
-    }
 }
 
 
